dfir_rs/tests/compile-fail-stable/surface_syntax_eol_missingop.rs
../compile-fail/surface_syntax_eol_missingop.rs